Issue #1975198 by Zarabadoo: Add missing background on the notification count in IE8 and lower.

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2250,6 +2250,7 @@ ul.commons-utility-links {
   font-size: .88em;
   @include border-radius(.4em);
   @include box-shadow(0 0 2px $light_blue);
+  background: $green;
   @include background(linear-gradient($green, darken($green, 20)));
 }
 
